# tse-trading-bot

./: .gitignore  README.md  dockerfile  dockerignore  pyproject.toml
devs/pocs/pandas_test/: test_dataframe_calc.ipynb
docs/: docker_run.md  message_demo.md
resource/: tickers.txt
resource/list/: tickers.txt
src/tse_trading_bot/: bot.py  bot_manual.py  data_collector.py  plotting.py  util.py
